- add functionality to generate transaction and reference id - add api to get callback logs
