# services/callback-service/api/handlers/on_resolve.go
@@ -20,6 +20,7 @@ type onResolve struct {
 func (l onResolve) Handle(params operations.PostG2pMapperOnResolveParams) middleware.Responder {
 	bytes, _ := json.Marshal(params.Body)
 	log.Infof("On link response: %v", string(bytes))
+	appendLog(string(*params.Body.Message.TransactionID), string(bytes))
 	response := operations.NewPostG2pMapperOnLinkDefault(200)
 	response.Payload = &operations.PostG2pMapperOnLinkDefaultBody{
 		Message: &operations.PostG2pMapperOnLinkDefaultBodyMessage{
