# services/callback-service/api/handlers/on_update.go
@@ -20,6 +20,7 @@ type onUpdate struct {
 func (l onUpdate) Handle(params operations.PutG2pMapperOnUpdateParams) middleware.Responder {
 	bytes, _ := json.Marshal(params.Body)
 	log.Infof("On link response: %v", string(bytes))
+	appendLog(string(*params.Body.Message.TransactionID), string(bytes))
 	response := operations.NewPostG2pMapperOnLinkDefault(200)
 	response.Payload = &operations.PostG2pMapperOnLinkDefaultBody{
 		Message: &operations.PostG2pMapperOnLinkDefaultBodyMessage{
